--- a/client/main.scss
+++ b/client/main.scss
@@ -38,27 +38,32 @@ body {
 }
 
 .button {
-  background-color: #555555; /* Black*/
-  border: 1px solid #DDD;
+  background-color: #555;
+  border: 1px solid #ddd;
   border-top-left-radius: 1em;
   border-top-right-radius: 1em;
-  color: white;
-  padding: 0.2em 0.3em 0em 0.3em;
+  color: #fff;
+  padding: .4em .6em 0;
   text-align: center;
   text-decoration: none;
   display: inline-block;
   font-size: 1.3em;
-  margin: 0.1em 0.2em;
+  margin: .1em .2em;
   cursor: pointer;
 }
-.button:hover{
-  color: #000000;
-}
 
-.nav-link{
-  background-color: #e1e1e1;
-  padding: 0.2em 0.3em 0em 0.3em;
-}
-// .nav-link.active{
+// .nav-link{
 //   background-color: #e1e1e1;
+//   padding: 0.2em 0.3em 0em 0.3em;
 // }
+
+.nav-tabs .nav-link {
+  /* border: 1px solid transparent; */
+  border-top-left-radius: .25rem;
+  border-top-right-radius: .25rem;
+}
+.nav-tabs .nav-item.show .nav-link, .nav-tabs .nav-link.active {
+  color: #495057;
+  background-color: #dee2e6;
+  border-color: #dee2e6 #dee2e6 #fff;
+}
