--- a/client/main.scss
+++ b/client/main.scss
@@ -62,12 +62,16 @@ body {
 
 footer {
   background-color: #555;
-  padding: 1em 0 1em 0;
+  padding: 1rem 0 1rem 0;
   position: fixed;
+  margin-left: auto;
+  margin-right: auto;
   width: 100%;
   color: #fff;
   bottom: 0;
   height:10vh;
+  font-size: 0.7rem;
+  overflow: hidden;
   ul {
     padding: 0;
     margin: 0;
@@ -77,13 +81,19 @@ footer {
     text-decoration: none;
   }
   li {
+    float:left;
     list-style: none;
   }
-  h3 {
+  li a{
+    display:block;
+    padding: 0.1rem;
+    cursor: pointer;
+  }
+  h5 {
     margin-top: 0;
   }
   .content {
-    margin-top: 2em;
+    margin-top: 2rem;
   }
 }
 
@@ -102,6 +112,6 @@ footer {
 }
 
 .footer-row {
-  width: 200px;
+  width: 30vw;
   margin-bottom: 15px;
 }
