--- a/client/main.scss
+++ b/client/main.scss
@@ -1,5 +1,10 @@
 
 @import "../node_modules/bootstrap/scss/bootstrap.scss";
+@import "./icon.scss";
+
+$button_BG : #555;
+$content_BG : #fff;
+$container_BG: #e1e1e1;
 
 html{
   min-height: 100%;
@@ -15,9 +20,7 @@ body {
   overflow: hidden;
 }
 
-$button_BG : #555;
-$content_BG : #fff;
-$container_BG: #e1e1e1;
+
 
 .container{
   background-color: $container_BG;
@@ -36,9 +39,9 @@ $container_BG: #e1e1e1;
 
 .button {
   background-color: $button_BG;
-  border: 1px solid #ddd;
-  border-top-left-radius: 1em;
-  border-top-right-radius: 1em;
+  border: 0px solid #ddd;
+  // border-top-left-radius: 1em;
+  // border-top-right-radius: 1em;
   color: #fff;
   padding: .4em .6em 0;
   text-align: center;
@@ -54,24 +57,23 @@ $container_BG: #e1e1e1;
 }
 
 .button:active{
-  background-color: #fff;
+  // background-color: #fff;
   color: #555;
 }
 
 .nav-bar{
-  box-shadow: 0rem 0.2rem 0.8rem  #ccc;
+  background-color: #555;
 }
 .nav-tabs .nav-link {
   /* border: 1px solid transparent; */
   padding: 1rem 1rem 0rem 1rem;
-  border-top-left-radius: .25rem;
-  border-top-right-radius: .25rem;
-  
 }
 .nav-tabs .nav-item.show .nav-link, .nav-tabs .nav-link.active {
   color: #495057;
-  background-color: #dee2e6;
-  border-color: #dee2e6 #dee2e6 #fff;
+  border: 0px solid #ddd;
+  background-color: #555;
+
+  // border-color: $button_BG;
 }
 
 .time_block_container{
@@ -114,7 +116,12 @@ footer {
   width: 100%;
   color: $content_BG;
   bottom: 0;
-  height:5rem;
+  @media only_screen and (min-width: 411px){
+    height:5vh;
+  }
+  @media only_screen and (max-device-width: 410px){
+    height:10vh;
+  }
   font-size: 0.7rem;
   overflow: hidden;
   ul {
