--- a/client/main.scss
+++ b/client/main.scss
@@ -7,7 +7,7 @@ $container_BG: #e1e1e1;
 
 html {
   min-height: 100%;
-  background-image: url("/images/bgi2.jpg");
+  background-image: url("/images/bgi2.webp");
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
